vlib/v/checker/tests/map_init_key_duplicate_err.vv
fn main() {
	a := {
		'foo': 'bar'
		'abc': 'abc'
		'foo': 'bar'
	}
	println(a)
}
